# nova-news

./: Cargo.toml  README.md  justfile
src/: err.rs  main.rs  rss.rs
src/gui/: about.rs  app.rs  localization.rs  main_view.rs  mod.rs
src/gui/embed/en/: nova_news.ftl
