[package]
name = "nova-news"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
i18n-embed = { version = "0.14.1", features = ["fluent-system"] }
i18n-embed-fl = "0.8.0"
once_cell = "1.19.0"
open = "5.2.0"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
rss = { version = "2.0.8", features = ["serde"] }
rust-embed = "8.4.0"
# serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.38.0"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

backtrace = { version = "0.3.73", optional = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["a11y", "debug", "tokio", "winit", "wgpu"]
optional = true

[dependencies.libcosmic-wayland]
git = "https://github.com/pop-os/libcosmic.git"
package = "libcosmic"
default-features = false
features = ["a11y", "debug", "tokio", "wayland", "wgpu"]
optional = true

[features]
default = ["backtrace", "wayland"]
backtrace = ["dep:backtrace"]
winit = ["dep:libcosmic"]
wayland = ["dep:libcosmic-wayland"]
